force-app/main/default/objects/Beer__c/fields/ABV__c.field-meta.xml
<CustomField>
    <fullName>ABV__c</fullName>
    <inlineHelpText>ABV of beer (00.0%)</inlineHelpText>
    <label>ABV</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>