force-app/main/default/objects/Beer__c/fields/Number_of_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reviews__c</fullName>
    <inlineHelpText>Number of reviews</inlineHelpText>
    <label>Number of Reviews</label>
    <summaryForeignKey>Review__c.Beer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>