force-app/main/default/objects/Beer__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barley Wine</fullName>
            </value>
            <value>
                <fullName>Barrel-Aged</fullName>
            </value>
            <value>
                <fullName>Berliner Weisse</fullName>
            </value>
            <value>
                <fullName>Blonde Ale</fullName>
            </value>
            <value>
                <fullName>Double IPA</fullName>
            </value>
            <value>
                <fullName>Hefeweizen</fullName>
            </value>
            <value>
                <fullName>IPA</fullName>
            </value>
            <value>
                <fullName>Kolsch</fullName>
            </value>
            <value>
                <fullName>Lager</fullName>
            </value>
            <value>
                <fullName>Lambic</fullName>
            </value>
            <value>
                <fullName>Pale Ale</fullName>
            </value>
            <value>
                <fullName>Pilsener</fullName>
            </value>
            <value>
                <fullName>Saison</fullName>
            </value>
            <value>
                <fullName>Session IPA</fullName>
            </value>
            <value>
                <fullName>Sour</fullName>
            </value>
            <value>
                <fullName>Stout</fullName>
            </value>
            <value>
                <fullName>Triple IPA</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>