force-app/main/default/objects/Beer__c/fields/Total_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Total_Ratings__c</fullName>
    <label>Total Ratings</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Beer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>